# email_stream_processor

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  Makefile  README.md  pyproject.toml  submit.Dockerfile  worker.Dockerfile
.travis/: travis-ci_service_account.json.enc
config/: server.properties
kubernetes/: kafka_secret.yaml  spark_cluster_role_binding.yaml  spark_service_account.yaml
scripts/: create_cluster.sh  create_kafka_topics.sh  delete_kafka_topics.sh  generate_kafka_topics.sh  start_topic_model.sh
src/email_stream_processor/download/: download_enron_dataset.py  download_spacy_model.py
src/email_stream_processor/helpers/anonymization/: text_anonymizer.py
src/email_stream_processor/helpers/config/: get_config.py
src/email_stream_processor/helpers/globals/: directories.py
src/email_stream_processor/helpers/input/: input_eml.py  input_parquet.py
src/email_stream_processor/helpers/output/: output_eml.py  output_parquet.py
src/email_stream_processor/jobs/: dev_pipeline.py  eml_pipeline.py  stream_pipeline.py  topic_model_preprocessing.py  vectorize_emails.py
src/email_stream_processor/parsing/: message_body_extraction.py  message_contents_extraction.py  message_header_extraction.py
src/email_stream_processor/spark_stream/: stream_pipeline.py
tests/data/emails/: README.md
tests/data/emails/mikel-mail/plain_emails/: perfect.eml
tests/email_stream_processor/helpers/input/: input_eml_test.py  input_parquet_test.py
tests/email_stream_processor/helpers/output/: output_parquet_test.py
tests/email_stream_processor/parsing/: message_contents_extraction_test.py
tests/email_stream_processor_tests/helpers/input/: input_parquet_test.py
tests/email_stream_processor_tests/helpers/output/: output_eml_test.py  output_parquet_test.py
tests/email_stream_processor_tests/helpers/validation/: address_validation_test.py  text_validation_test.py
tests/email_stream_processor_tests/parsing/: message_body_extraction_test.py  message_contents_extraction_test.py  message_header_extraction_test.py
